Bug 1656329 - Add a mutex to protect nsZipArchive::mFiles and nsZipArchive::mBuiltSynthetics r=valentin

Differential Revision: https://phabricator.services.mozilla.com/D109820